# Calendar

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  local.properties  settings.gradle.kts  settings.gradle.kts.bak
.github/: dependabot.yml
.github/workflows/: android.yml  macos-arm64.yml  update-gradle-wrapper.yml
android/: build.gradle.kts  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/src/main/kotlin/com/ohyooo/android/: MainActivity.kt
android/src/main/kotlin/com/ohyooo/calendar/: MainActivity.kt  NativeBridge.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/kotlin/com/ohyooo/calendar/: App.kt  CalendarActivity.kt  SplashActivity.kt  util.kt
app/src/main/res/values/: style.xml
benchmark/: build.gradle.kts
benchmark/src/main/: AndroidManifest.xml
buildSrc/src/main/kotlin/: dependencies.kt
common/: build.gradle.kts
desktop/: build.gradle.kts
desktop/src/jvmMain/kotlin/: Main.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: .gitignore
iosApp/iosApp/: ContentView.swift
iosApp/iosApp.xcodeproj/project.xcworkspace/xcuserdata/debug.xcuserdatad/: UserInterfaceState.xcuserstate
native/: build.gradle.kts
shared/: build.gradle.kts
shared/src/commonMain/kotlin/: App.kt
shared/src/wasmJsMain/resources/: index.html
ui/: build.gradle.kts
ui/src/iosMain/kotlin/: main.ios.kt
ui/src/wasmJsMain/resources/: index.html
(+46 files in other folders)
